@@ -2,7 +2,7 @@ sg3-utils (1.27-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Thu, 05 Feb 2009 16:00:00 -0500
+ -- Doug Gilbert <dgilbert@interlog.com>  Tue, 24 Feb 2009 11:30:00 +0100
 
 sg3-utils (1.26-0.1) unstable; urgency=low
 
