@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.27 [20090223] [svn: r218]
+Changelog for sg3_utils-1.27 [20090224] [svn: r219]
   - sg_inq: sync version descriptors with spc4r18
     - add power condition VPD page
   - sg_vpd: add power condition VPD page
@@ -22,6 +22,7 @@ Changelog for sg3_utils-1.27 [20090223] [svn: r218]
   - sg_get_config: add OSSC feature [mmc6r02]
   - sg_modes: add ATA power condition mode page
   - sg_logs: protocol specific (SAS) lpage sync to sas2r15
+    - power condition transitions lpage (added in spc4r18)
   - sg3_utils.spec: correction to configure call
   - sg_pt: add scsi_pt_open_device_flags() call to public interface
     - add scsi_pt_version() and clear_scsi_pt_obj() calls
